--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-imagemin": "~1.0.0",
     "grunt-contrib-jshint": "^0.12.0",
     "grunt-contrib-sass": "~0.9.2",
+    "grunt-grunticon": "^2.2.1",
     "grunt-contrib-watch": "~0.6.1",
     "load-grunt-tasks": "~3.4.0"
   }
