--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "basic",
   "version": "1.0.0",
   "devDependencies": {
+    "autoprefixer": "^7.1.4",
     "grunt": "~1.0.1",
-    "grunt-autoprefixer": "~3.0.3",
     "grunt-contrib-imagemin": "~2.0.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-sass": "~1.0.0",
     "grunt-contrib-watch": "~1.0.0",
+    "grunt-postcss": "^0.9.0",
     "load-grunt-tasks": "~3.5.2"
   }
 }
