--- a/package.json
+++ b/package.json
@@ -2,18 +2,26 @@
   "name": "basic",
   "version": "1.0.0",
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "ie >= 9"
+    "last 1 major version",
+    ">= 1%",
+    "Chrome >= 45",
+    "Firefox >= 38",
+    "Edge >= 12",
+    "Explorer >= 10",
+    "iOS >= 9",
+    "Safari >= 9",
+    "Android >= 4.4",
+    "Opera >= 30"
   ],
   "devDependencies": {
-    "autoprefixer": "^7.1.4",
+    "autoprefixer": "^8.5.0",
+    "bootstrap": "^4.1.1",
     "grunt": "~1.0.1",
     "grunt-contrib-imagemin": "~2.0.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-sass": "~1.0.0",
-    "grunt-contrib-watch": "~1.0.0",
+    "grunt-contrib-watch": "~1.1.0",
     "grunt-postcss": "^0.9.0",
-    "load-grunt-tasks": "~3.5.2"
+    "load-grunt-tasks": "~4.0.0"
   }
 }
