--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^9.8.5",
     "bootstrap": "^4.3.1",
     "grunt": "~1.0.1",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-imagemin": "~2.0.1",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-sass": "~1.0.0",
