--- a/package.json
+++ b/package.json
@@ -2,28 +2,26 @@
   "name": "basic",
   "version": "1.0.0",
   "browserslist": [
-    ">= 1%",
-    "last 1 major version",
+    ">= 0.5%",
+    "last 2 major versions",
     "not dead",
-    "Chrome >= 45",
-    "Firefox >= 38",
-    "Edge >= 12",
-    "Explorer >= 10",
-    "iOS >= 9",
-    "Safari >= 9",
-    "Android >= 4.4",
-    "Opera >= 30"
+    "Chrome >= 60",
+    "Firefox >= 60",
+    "Firefox ESR",
+    "iOS >= 12",
+    "Safari >= 12",
+    "not Explorer <= 11"
   ],
   "devDependencies": {
     "autoprefixer": "^9.8.5",
-    "bootstrap": "^4.3.1",
-    "grunt": "~1.0.1",
+    "bootstrap": "^5.0.1",
+    "grunt": "^1.4.1",
     "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-imagemin": "~2.0.1",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-sass": "~1.0.0",
-    "grunt-contrib-watch": "~1.1.0",
+    "grunt-contrib-imagemin": "^4.0.0",
+    "grunt-contrib-jshint": "^3.0.0",
+    "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-postcss": "^0.9.0",
-    "load-grunt-tasks": "~4.0.0"
+    "load-grunt-tasks": "^4.0.0"
   }
 }
