--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
 	"name": "basic",
 	"version": "1.0.0",
 	"browserslist": [
-		">= 0.5%",
-		"last 2 major versions",
+		">= 1%",
+		"last 1 major version",
 		"not dead",
-		"Chrome >= 60",
-		"Firefox >= 60",
-		"Firefox ESR",
-		"iOS >= 12",
-		"Safari >= 12",
-		"not Explorer <= 11"
+		"Chrome >= 45",
+		"Firefox >= 38",
+		"Edge >= 12",
+		"Explorer >= 10",
+		"iOS >= 9",
+		"Safari >= 9",
+		"Android >= 4.4",
+		"Opera >= 30"
 	],
 	"devDependencies": {
-		"autoprefixer": "^10.4.2",
+		"autoprefixer": "^9.8.8",
 		"grunt": "^1.4.1",
 		"grunt-browser-sync": "^2.2.0",
-		"grunt-contrib-imagemin": "^4.0.0",
-		"grunt-contrib-jshint": "^3.1.1",
-		"grunt-contrib-sass": "^2.0.0",
-		"grunt-contrib-watch": "^1.1.0",
+		"grunt-contrib-imagemin": "~3.1.0",
+		"grunt-contrib-jshint": "^2.1.0",
+		"grunt-contrib-sass": "~1.0.0",
+		"grunt-contrib-watch": "~1.1.0",
 		"grunt-postcss": "^0.9.0",
-		"load-grunt-tasks": "^5.1.0"
+		"load-grunt-tasks": "~5.1.0"
 	}
 }
