--- a/package.json
+++ b/package.json
@@ -2,17 +2,7 @@
 	"name": "basic",
 	"version": "1.0.0",
 	"browserslist": [
-		">= 1%",
-		"last 1 major version",
-		"not dead",
-		"Chrome >= 45",
-		"Firefox >= 38",
-		"Edge >= 12",
-		"Explorer >= 10",
-		"iOS >= 9",
-		"Safari >= 9",
-		"Android >= 4.4",
-		"Opera >= 30"
+		"defaults"
 	],
 	"devDependencies": {
 		"autoprefixer": "^9.8.6",
